--- a/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
@@ -9,11 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-@if (Model == null || Model.Count() == 0)
-{
-    <h2>No employees</h2>
-}
-else
+@if (Model.Any())
 {
     <table class="table">
         <thead>
@@ -22,13 +18,13 @@ else
                     @Html.DisplayNameFor(model => model.Id)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProjectId)
+                    @Html.DisplayNameFor(model => model.Project)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.EmployeeId)
+                    @Html.DisplayNameFor(model => model.Employee)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.PositionId)
+                    @Html.DisplayNameFor(model => model.Position)
                 </th>
                 <th></th>
             </tr>
@@ -38,20 +34,20 @@ else
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Id)
+                        @Html.ActionLink(item.Id.ToString(), "GetDetails", "ProjectEmployee", new { id = item.Id })
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ProjectId)
+                        @Html.ActionLink(item.Project.Name, "GetDetails", "Project", new { id = item.ProjectId })
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EmployeeId)
+                        @Html.ActionLink($"{item.Employee.FirstName} {item.Employee.LastName}", "GetDetails", "Employee", new { id = item.EmployeeId })
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.PositionId)
+                        @Html.ActionLink(item.Position.Name, "GetDetails", "Position", new { id = item.PositionId })
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                        @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
+                        @Html.ActionLink("Details", "GetDetails", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                     </td>
                 </tr>
@@ -59,4 +55,8 @@ else
         </tbody>
     </table>
 
+}
+else
+{
+    <h2>No ProjectEmployee</h2>
 }
