--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-controller="Employee" asp-action="GetAll">Employees</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Employee" asp-action="GetAll">Project Employees</a>
+                            <a class="nav-link text-dark" asp-controller="ProjectEmployee" asp-action="GetAll">Project Employees</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Employee" asp-action="GetAll">Projects</a>
