--- a/Workers/Workers.Web/Views/ProjectEmployee/Create.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/Create.cshtml
@@ -14,15 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
+                <select asp-for="ProjectId" class="form-control"
+                        asp-items="@(new SelectList(ViewBag.Projects, "Id", "Name"))"></select>
             </div>
             <div class="form-group">
                 <label asp-for="EmployeeId" class="control-label"></label>
-                <select asp-for="EmployeeId" class ="form-control" asp-items="ViewBag.EmployeeId"></select>
+                <select asp-for="EmployeeId" class="form-control"
+                        asp-items="@(new SelectList(ViewBag.Employees, "Id", "FullName"))"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PositionId" class="control-label"></label>
-                <select asp-for="PositionId" class ="form-control" asp-items="ViewBag.PositionId"></select>
+                <select asp-for="PositionId" class="form-control"
+                        asp-items="@(new SelectList(ViewBag.Positions, "Id", "Name"))"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
