--- a/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
@@ -11,32 +11,26 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.ProjectId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.Project.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Name)
+            @Html.DisplayNameFor(model => model.EmployeeId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Name)
+            @Html.DisplayFor(model => model.Employee.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.LastName)
+            @Html.DisplayNameFor(model => model.PositionId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Position.Name)
+            @Html.DisplayFor(model => model.Position.Id)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    <a asp-action="GetAll">Back to List</a>
 </div>
