--- a/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
@@ -47,7 +47,7 @@
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                        @Html.ActionLink("Details", "GetDetails", new { /* id=item.PrimaryKey */ }) |
+                        @Html.ActionLink("Details", "GetDetails", "ProjectEmployee", new {  id=item.Id }) |
                         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                     </td>
                 </tr>
