--- a/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
@@ -14,19 +14,19 @@
             @Html.DisplayNameFor(model => model.ProjectId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Id)
+            @Html.DisplayFor(model => model.Project.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EmployeeId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Id)
+            @Html.DisplayFor(model => model.Employee.FullName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PositionId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Position.Id)
+            @Html.DisplayFor(model => model.Position.Name)
         </dd>
     </dl>
 </div>
