Edit method GetDetails. Add HttpGet and HttpPost method Delete

--- a/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
@@ -46,9 +46,9 @@
                         @Html.ActionLink(item.Position.Name, "GetDetails", "Position", new { id = item.PositionId })
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                        @Html.ActionLink("Details", "GetDetails", "ProjectEmployee", new {  id=item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "GetDetails", "ProjectEmployee", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                     </td>
                 </tr>
             }
