--- a/Workers/Workers.Web/Views/Project/Create.cshtml
+++ b/Workers/Workers.Web/Views/Project/Create.cshtml
@@ -29,7 +29,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="StatusProjectId" class="control-label"></label>
-                <select asp-for="StatusProjectId" class ="form-control" asp-items="ViewBag.StatusProjectId"></select>
+                <select asp-for="StatusProjectId" class ="form-control" 
+                        asp-items="@(new SelectList(ViewBag.StatusProjects, "Id", "Status"))"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
