--- a/Workers/Workers.Web/Views/ProjectEmployee/Edit.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/Edit.cshtml
@@ -26,13 +26,13 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
+                <label asp-for="ProjectId" class="control-label">ProjectName</label>
                 <select asp-for="ProjectId" class="form-control"
                         asp-items="@(new SelectList(ViewBag.Projects, "Id", "Name"))"></select>
             </div>
 
             <div class="form-group">
-                <label asp-for="PositionId" class="control-label"></label>
+                <label asp-for="PositionId" class="control-label">PositionName</label>
                 <select asp-for="PositionId" class="form-control"
                         asp-items="@(new SelectList(ViewBag.Positions, "Id", "Name"))"></select>
             </div>
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="GetAll">Back to List</a>
 </div>
 
 @section Scripts {
