--- a/Workers/Workers.Web/Views/Project/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Project/GetAll.cshtml
@@ -28,26 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StatusProject.Status)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartAt)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndAt)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StatusProject.Status)
+                </td>
+                <td>
+                    @Html.ActionLink("Details", "GetDetails", "Project", new { id = item.Id }) |
+                    @Html.ActionLink("Edit", "Edit", "Project", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", "Project", new { id = item.Id })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
