Add new controller TaskController. Create view for TaskController. Edit View _Layout.cshtml

--- a/Workers/Workers.Web/Views/Project/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Project/GetAll.cshtml
@@ -45,7 +45,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Details", "GetDetails", "Project", new { id = item.Id }) |
-                    @Html.ActionLink("Edit", "Edit", "Project", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", "Project", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", "Project", new { id = item.Id })
                 </td>
             </tr>
