--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,10 @@
                             <a class="nav-link text-dark" asp-controller="Project" asp-action="GetAll">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Employee" asp-action="GetAll">Tasks</a>
+                            <a class="nav-link text-dark" asp-controller="Task" asp-action="GetAll">Tasks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Status" asp-action="GetAll">StatusTask</a>
                         </li>
                     </ul>
                 </div>
