New controller was created StatusTaskController and create view Create, GetAll. Edited view _Layout (editing of  tag helper);

--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-controller="Task" asp-action="GetAll">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Status" asp-action="GetAll">StatusTask</a>
+                            <a class="nav-link text-dark" asp-controller="StatusTask" asp-action="GetAll">StatusTask</a>
                         </li>
                     </ul>
                 </div>
