--- a/Workers/Workers.Web/Views/StatusTask/Create.cshtml
+++ b/Workers/Workers.Web/Views/StatusTask/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.StatusTask
+﻿@model Workers.Web.Infrastructure.Models.Status
 
 @{
     ViewData["Title"] = "Create";
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="StatusName" class="control-label"></label>
+                <input asp-for="StatusName" class="form-control" />
+                <span asp-validation-for="StatusName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
