--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-controller="ProjectEmployee" asp-action="GetAll">Project Employees</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Position" asp-action="GetAll">Position</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Project" asp-action="GetAll">Projects</a>
                         </li>
                         <li class="nav-item">
