Added new controller StatusProject and relevant view. Add  new element to Veiws/Shared _Layout

--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="nav-link text-dark" asp-controller="Project" asp-action="GetAll">Projects</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="StatusProject" asp-action="GetAll">Status Project</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Task" asp-action="GetAll">Tasks</a>
                         </li>
                         <li class="nav-item">
