--- a/Workers/Workers.Web/Views/Position/Delete.cshtml
+++ b/Workers/Workers.Web/Views/Position/Delete.cshtml
@@ -19,7 +19,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeletePosition">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="GetAll">Back to List</a>
