--- a/Workers/Workers.Web/Views/Task/Delete.cshtml
+++ b/Workers/Workers.Web/Views/Task/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Workers.Web.Infrastructure.Models.Task
 
 @{
-    ViewData["Title"] = "GetDetails";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>GetDetails</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Task</h4>
     <hr />
@@ -41,14 +42,10 @@
             @Html.DisplayFor(model => model.Project.Id)
         </dd>
     </dl>
-</div>
-<div>
-    @foreach (var item in Model.TaskStatuses)
-    {
-        @Url.ActionLink("GetDetails", "StatusTask", new { id = item.StatusTask.Id });
-    }
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="DeleteTask">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="GetAll">Back to List</a>
+    </form>
 </div>
