Added delete possibility in Employee controller and views

--- a/Workers/Workers.Web/Views/Employee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Employee/GetAll.cshtml
@@ -59,7 +59,8 @@ else
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { Id = item.Id }) |
-                        @Html.ActionLink("Details", "GetDetails", new { id=item.Id })
+                        @Html.ActionLink("Details", "GetDetails", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                     </td>
                 </tr>
             }
