--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="StatusTask" asp-action="GetAll">StatusTask</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="TaskStatus" asp-action="GetAll">TaskStatus</a>
+                        </li>
                     </ul>
                 </div>
             </div>
