Add hash to password. Edit view and create new.

--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="TaskStatus" asp-action="GetAll">TaskStatus</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="EmployeesRole" asp-action="GetAll">EmployeesRole</a>
+                        </li>
                     </ul>
                 </div>
             </div>
