--- a/Workers/Workers.Web/Views/Account/Register.cshtml
+++ b/Workers/Workers.Web/Views/Account/Register.cshtml
@@ -1,20 +1,17 @@
-﻿@model Workers.Web.Infrastructure.Models.Employee
+﻿@model Workers.Web.Infrastructure.Models.EmployeeRegister
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Register";
 }
 
-<h1>Edit</h1>
+<h1>Register</h1>
 
-<h4>Employee</h4>
+<h4>EmployeeRegister</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditEmployee">
+        <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <input asp-for="Id" type="hidden" class="form-control" />
-            </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -25,25 +22,25 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
-                <input asp-for="Login" class="form-control" />
-                <span asp-validation-for="Login" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="PasswordHash" class="control-label"></label>
+                <input asp-for="PasswordHash" class="form-control" />
+                <span asp-validation-for="PasswordHash" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetAll">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
