--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -45,9 +45,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="EmployeesRole" asp-action="GetAll">EmployeesRole</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="GetAll">Admin</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="GetAll">Admin</a>
+                            </li>
+                        }
+
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
