--- a/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/Edit.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/Edit.cshtml
@@ -1,36 +1,39 @@
 ﻿@model Workers.Web.Infrastructure.Models.EmployeeRole
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>EmployeeRole</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-area="Admin" asp-action="EditEmployeesRole">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="EmployeeId" class="control-label"></label>
-                <select asp-for="EmployeeId" class ="form-control"
-                        asp-items="@(new SelectList(ViewBag.Employees, "Id", "Email"))"></select>
+                <select asp-for="EmployeeId" class="form-control" 
+                         asp-items="@(new SelectList(ViewBag.Employees, "Id", "Email"))"></select>
+                <span asp-validation-for="EmployeeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RoleId" class="control-label"></label>
-                <select asp-for="RoleId" class ="form-control" 
+                <select asp-for="RoleId" class="form-control" 
                         asp-items="@(new SelectList(ViewBag.Roles, "Id", "Name"))"></select>
+                <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetAll">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
