--- a/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
@@ -50,7 +50,7 @@
                     {
                         <td>
                             @Html.ActionLink("Edit", "Edit", "ProjectEmployee", new { id = item.Id, Area = "Admin" }) |
-                            @Html.ActionLink("Details", "GetDetails", "ProjectEmployee", new { id = item.Id, Area = "Admin" }) |
+                            @Html.ActionLink("Details", "GetDetails", "ProjectEmployee", new { id = item.Id }) |
                             @Html.ActionLink("Delete", "Delete", "ProjectEmployee", new { id = item.Id, Area = "Admin" })
                         </td>
                     }
