--- a/Workers/Workers.Web/Views/StatusTask/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/StatusTask/GetAll.cshtml
@@ -28,14 +28,15 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.StatusName)
                     </td>
+
                     @if (User.IsInRole("Admin"))
                     {
                         <td>
                             @Html.ActionLink("Edit", "Edit", "StatusTask", new { id = item.Id, area = "Admin" }) |
-                            @Html.ActionLink("Delete", "Delete", "StatusTask", new { id = item.Id, area = "Admin" })
+                            @Html.ActionLink("GetDetails", "GetDetails", "StatusTask", new { id = item.Id })
+                            @Html.ActionLink("Delete", "Delete", "StatusTask", new { id = item.Id, area = "Admin" }) |
                         </td>
                     }
-                    @Html.ActionLink("GetDetails", "GetDetails", "StatusTask", new { id = item.Id })
                 </tr>
             }
         </tbody>
