Changing paths to Domaint and Data. And minor fix

--- a/Workers/Workers.Web/Areas/Admin/Views/Admin/GetAll.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/Admin/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Role>
+﻿@model IEnumerable<Workers.Domain.Models.Role>
 
 @{
     ViewData["Title"] = "GetAll";
