--- a/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/Create.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.EmployeeRole
+﻿@model Workers.Domain.Models.EmployeeRole
 
 @{
     ViewData["Title"] = "Create";
