--- a/Workers/Workers.Web/Areas/Admin/Views/StatusProject/Create.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/StatusProject/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.StatusProject
+﻿@model Workers.Domain.Models.StatusProject
 
 @{
     ViewData["Title"] = "Create";
