--- a/Workers/Workers.Web/Areas/Admin/Views/TaskStatus/Edit.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/TaskStatus/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.TaskStatus
+﻿@model Workers.Domain.Models.TaskStatus
 
 @{
     ViewData["Title"] = "Edit";
