--- a/Workers/Workers.Web/Views/Account/Register.cshtml
+++ b/Workers/Workers.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.EmployeeRegister
+﻿@model Workers.Domain.Models.EmployeeRegister
 
 @{
     ViewData["Title"] = "Register";
