--- a/Workers/Workers.Web/Views/Employee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Employee/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Employee>
+﻿@model IEnumerable<Workers.Domain.Models.Employee>
 
 @{
     ViewData["Title"] = "GetAll";
