--- a/Workers/Workers.Web/Views/Position/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Position/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Position>
+﻿@model IEnumerable<Workers.Domain.Models.Position>
 
 @{
     ViewData["Title"] = "GetAll";
