--- a/Workers/Workers.Web/Views/Project/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Project/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Project>
+﻿@model IEnumerable<Workers.Domain.Models.Project>
 
 @{
     ViewData["Title"] = "GetAll";
