--- a/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.ProjectEmployee
+﻿@model Workers.Domain.Models.ProjectEmployee
 
 @{
     ViewData["Title"] = "GetDetails";
