--- a/Workers/Workers.Web/Views/StatusTask/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/StatusTask/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Status>
+﻿@model IEnumerable<Workers.Domain.Models.Status>
 
 @{
     ViewData["Title"] = "GetAll";
