--- a/Workers/Workers.Web/Views/Task/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/Task/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.Task>
+﻿@model IEnumerable<Workers.Domain.Models.Task>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
