--- a/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/GetAll.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/EmployeesRole/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.EmployeeRole>
+﻿@model IEnumerable<Workers.Domain.Models.EmployeeRole>
 
 @{
     ViewData["Title"] = "GetAll";
