--- a/Workers/Workers.Web/Areas/Admin/Views/ProjectEmployee/Edit.cshtml
+++ b/Workers/Workers.Web/Areas/Admin/Views/ProjectEmployee/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model Workers.Web.Infrastructure.Models.ProjectEmployee
+﻿@model Workers.Domain.Models.ProjectEmployee
 
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
-    List<Workers.Web.Infrastructure.Models.Position> positions = ViewBag.Positions as List<Workers.Web.Infrastructure.Models.Position>;
-    List<Workers.Web.Infrastructure.Models.Project> projects = ViewBag.Projects as List<Workers.Web.Infrastructure.Models.Project>;
+    List<Workers.Domain.Models.Position> positions = ViewBag.Positions as List<Workers.Domain.Models.Position>;
+    List<Workers.Domain.Models.Project> projects = ViewBag.Projects as List<Workers.Domain.Models.Project>;
 
 }
 
