--- a/Workers/Workers.Web/Views/Account/Login.cshtml
+++ b/Workers/Workers.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workers.Web.Infrastructure.Models.EmployeeLogin
+﻿@model Workers.Domain.Models.EmployeeLogin
 
 @{
     ViewData["Title"] = "Login";
