--- a/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/ProjectEmployee/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.ProjectEmployee>
+﻿@model IEnumerable<Workers.Domain.Models.ProjectEmployee>
 
 @{
     ViewData["Title"] = "GetAll";
