--- a/Workers/Workers.Web/Views/StatusProject/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/StatusProject/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.StatusProject>
+﻿@model IEnumerable<Workers.Domain.Models.StatusProject>
 
 @{
     ViewData["Title"] = "GetAll";
