--- a/Workers/Workers.Web/Views/TaskStatus/GetAll.cshtml
+++ b/Workers/Workers.Web/Views/TaskStatus/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workers.Web.Infrastructure.Models.TaskStatus>
+﻿@model IEnumerable<Workers.Domain.Models.TaskStatus>
 
 @{
     ViewData["Title"] = "GetAll";
